Fixed layout issue (admin button margin).

--- a/resources/assets/less/semantic.less
+++ b/resources/assets/less/semantic.less
@@ -21,3 +21,9 @@ form.ui.modal {
         margin-right: auto;
     }
 }
+
+.ui.button {
+    i.edit.icon, i.close.icon {
+        margin: 0 !important;
+    }
+}
